<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="240dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/pop_record_to_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:background="@drawable/ease_mm_listitem"
        android:gravity="center_vertical"
        android:text="@string/record_to_top"
        android:textColor="@color/black_33"
        android:textSize="16sp"/>
    <View
        android:id="@+id/newinvite_dialog_divider_top"
        style="@style/devider_style_gray"/>
    <TextView
        android:id="@+id/pop_mark_unread"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:background="@drawable/ease_mm_listitem"
        android:gravity="center_vertical"
        android:text="@string/mark_unread"
        android:textColor="@color/black_33"
        android:textSize="16sp"/>
    <View
        android:id="@+id/newinvite_dialog_divider"
        style="@style/devider_style_gray"/>
    <TextView
        android:id="@+id/pop_delete_recoder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:background="@drawable/ease_mm_listitem"
        android:gravity="center_vertical"
        android:text="@string/delete_recoder"
        android:textColor="@color/black_33"
        android:textSize="16sp"/>

</LinearLayout>
