<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="240dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/message_to"
        android:textColor="@color/primary_text"
        android:textSize="22sp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/mTransforMultiUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/mTransforSingleUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<ViewStub-->
            <!--android:id="@+id/mTransforAvatar"-->
            <!--android:layout_width="45dp"-->
            <!--android:layout_height="45dp"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--/>-->
            <com.lensim.fingerchat.commons.widgt.AvatarImageView
                android:id="@+id/iv_avatar"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:id="@+id/mTransforName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="6dp"
                android:layout_gravity="center_vertical"
                android:text=""
                android:textColor="@color/primary_text"
                android:textSize="12sp"/>
            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_arrow_down"/>
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <RelativeLayout
            android:id="@+id/rl_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mTransforContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:background="@color/bghuise"
                android:ellipsize="end"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/gray_normal"/>

            <ImageView
                android:id="@+id/mTransforImg"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:visibility="gone"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black_33"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:visibility="visible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/indent_10"
                android:background="@color/black_33"/>


        </LinearLayout>


    </RelativeLayout>

    <EditText
        android:id="@+id/mTransforMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="5dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/leave_message"
        android:textColor="@color/black"
        android:textColorHint="@color/btn_border"
        android:textSize="12sp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/mTransforCancel"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/mTransforConfirm"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:textColor="@color/gray_normal"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/mTransforConfirm"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/btn_confrim"
            android:textColor="@color/primary"
            android:textSize="12sp"/>

    </RelativeLayout>
</LinearLayout>